fix: align content on 404 page

--- a/online-zoo/pages/error-404/error-404.css
+++ b/online-zoo/pages/error-404/error-404.css
@@ -33,10 +33,8 @@ header {
 }
 .nav-wrapper {
   background:  #fcfcfc;
-  width: 1704px;
+  width: 1710px;
   height: 86px;
-  border: 2px solid #f0f0f0;
-  border-left: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -69,10 +67,9 @@ header {
 }
 .nav-wrapper img {
   width: 52px;
-  margin-right: 92px;
 }
 .nav-wrapper nav {
-  margin-left: 89px;
+  margin-left: 94px;
   margin-top: 4px;
 }
 .nav-wrapper nav ul {
@@ -94,9 +91,8 @@ header {
   cursor: pointer;
 }
 .logo {
-  width: 86px;
-  height: 86px;
-  border: 2px solid #f0f0f0;
+  width: 90px;
+  height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -125,7 +121,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 22px;
   background: no-repeat url(../../assets/images/404.png);
   background-position: 296px 42px;
 }
